Fix spacing

--- a/src/pages/Dashboard/Preview/Preview.module.scss
+++ b/src/pages/Dashboard/Preview/Preview.module.scss
@@ -4,12 +4,16 @@
 	padding: 1rem;
 	display: flex;
 	flex-direction: column;
-	row-gap: 2rem;
+	row-gap: 3.5rem;
 	min-height: 100dvh;
 
 	.preview_nav {
 		display: flex;
 		column-gap: 1rem;
+	}
+
+	main {
+		padding: 0 2rem;
 	}
 
 	.user_bio {
